[package]
name = "hptt"
version = "0.2.0"
edition = "2024"
description = "Rust bindings for HPTT (High-Performance Tensor Transposition)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultimatile/hptt-rs"
readme = "README.md"
keywords = ["tensor", "transpose", "hpc"]
categories = ["science", "mathematics"]

[dependencies]
num-complex = "0.4"

[build-dependencies]
cmake = "0.1"

[lib]
name = "hptt"
path = "src/lib.rs"

[features]
default = []
