[package]
name = "hptt"
version = "0.4.0"
edition = "2024"
description = "Rust bindings for HPTT (High-Performance Tensor Transposition)"
readme = "README.md"
repository = "https://github.com/ultimatile/hptt-rs"
license = "MIT OR Apache-2.0"
keywords = ["hpc", "tensor", "transpose"]
categories = ["mathematics", "science"]

[lib]
name = "hptt"
path = "src/lib.rs"

[dependencies]
num-complex = "0.4"

[build-dependencies]
cmake = "0.1"

[features]
default = []
